chore(0): Fixated markdown-to-jsx to version 7.7.3

--- a/common-components/package.json
+++ b/common-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@buerokratt-ria/common-gui-components",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Common GUI components and pre defined templates.",
   "main": "index.ts",
   "author": "ExiRai",
@@ -34,7 +34,7 @@
     "linkify-react": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "lodash": "^4.17.21",
-    "markdown-to-jsx": "^7.5.0",
+    "markdown-to-jsx": "7.7.3",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-cookie": "^4.1.1",
@@ -88,7 +88,7 @@
     "linkify-react": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "lodash": "^4.17.21",
-    "markdown-to-jsx": "^7.5.0",
+    "markdown-to-jsx": "7.7.3",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-cookie": "^4.1.1",
