--- a/common-components/package.json
+++ b/common-components/package.json
@@ -59,7 +59,8 @@
     "use-debounce": "^10.0.1",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
-    "zustand": "^4.4.4"
+    "zustand": "^4.4.4",
+    "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
     "@buerokratt-ria/header": "^0.1.20",
@@ -118,6 +119,8 @@
     "@types/react": "^18.0.26",
     "@types/react-cookies": "^0.1.3",
     "@types/react-dom": "^18.0.9",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "sanitize-html": "^2.17.0",
+    "@types/sanitize-html": "^2.16.0"
   }
 }
