--- a/common-components/package.json
+++ b/common-components/package.json
@@ -60,7 +60,8 @@
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
     "zustand": "^4.4.4",
-    "sanitize-html": "^2.17.0"
+    "sanitize-html": "^2.17.0",
+    "@types/sanitize-html": "^2.16.0"
   },
   "devDependencies": {
     "@buerokratt-ria/header": "^0.1.20",
